--- a/bm/views/main.xml
+++ b/bm/views/main.xml
@@ -107,9 +107,11 @@
                     </header>
                     <sheet string="Project">
                         <div class="oe_button_box" name="button_box" groups="base.group_user">
-                            <button class="oe_stat_button" name="attachment_tree_view" type="object"
-                                    icon="fa-files-o">
-                                <field string="Documents" name="doc_count" widget="statinfo"/>
+                            <button name="action_get_attachment_tree_view"
+                                    class="oe_stat_button"
+                                    icon="fa-book"
+                                    type="object">
+                                <field name="attachment_number" widget="statinfo" string="Attachments"/>
                             </button>
                         </div>
                         <div class="oe_title">
@@ -141,7 +143,7 @@
                 </form>
             </field>
         </record>
-        <menuitem action="project_act" id="bm_action_project" name="Project" parent="bm_menu_left" sequence="2"/>
+        <menuitem action="project_act" id="bm_action_project" name="Projects" parent="bm_menu_left" sequence="2"/>
         <!--Task-->
         <record id="wb_project_task_form_inherit" model="ir.ui.view">
             <field name="name">project.task.form.inherit</field>
@@ -175,5 +177,136 @@
             </field>
         </record>
         <menuitem action="project.action_view_task" id="bm_action_contract" name="Tasks" parent="bm.bm_menu_left" sequence="4"/>
+        <!--Report-->
+        <record id="view_report_form" model="ir.ui.view">
+            <field name="name">bm.report.form</field>
+            <field name="model">bm.report</field>
+            <field name="arch" type="xml">
+                <form string="Report">
+                    <header>
+                        <field name="state" widget="statusbar" clickable="True"/>
+                    </header>
+                    <sheet string="Report">
+                        <div class="oe_button_box" name="button_box" groups="base.group_user">
+                            <button name="action_get_attachment_tree_view"
+                                    class="oe_stat_button"
+                                    icon="fa-book"
+                                    type="object">
+                                <field name="attachment_number" widget="statinfo" string="Attachments"/>
+                            </button>
+                        </div>
+                        <div class="oe_title">
+                            <h1>
+                                <field name="task_id" placeholder="Task"/>
+                            </h1>
+                        </div>
+                        <notebook>
+                            <page string="Basic data">
+                                <group name="group_alias" colspan="2" col="2">
+                                    <group>
+                                        <field name="foremen_id"/>
+                                        <field name="date"/>
+                                    </group>
+                                    <group>
+                                    </group>
+                                </group>
+                                <field name="estimate_ids" nolabel="1"/>
+                            </page>
+                        </notebook>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+        <record id="view_report_tree" model="ir.ui.view">
+            <field name="name">bm.report.tree</field>
+            <field name="model">bm.report</field>
+            <field name="arch" type="xml">
+                <tree string="Report">
+                    <field name="date"/>
+                    <field name="state"/>
+                    <field name="task_id"/>
+                    <field name="foremen_id"/>
+                </tree>
+            </field>
+        </record>
+        <record id="report_act" model="ir.actions.act_window">
+            <field name="name">Reports</field>
+            <field name="res_model">bm.report</field>
+            <field name="view_mode">tree,form</field>
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">
+                    Here, you can create new Report
+                </p>
+            </field>
+        </record>
+        <menuitem action="report_act" id="bm_action_report" name="Reports" parent="bm.bm_menu_left" sequence="5"/>
+        <!--Estimate-->
+        <record id="view_estimate_form" model="ir.ui.view">
+            <field name="name">bm.estimate.form</field>
+            <field name="model">bm.estimate</field>
+            <field name="arch" type="xml">
+                <form string="Estimate">
+                    <sheet string="Estimate">
+                        <div class="oe_button_box" name="button_box" groups="base.group_user">
+                            <button name="action_get_attachment_tree_view"
+                                    class="oe_stat_button"
+                                    icon="fa-book"
+                                    type="object">
+                                <field name="attachment_number" widget="statinfo" string="Attachments"/>
+                            </button>
+                        </div>
+                        <div class="oe_title">
+                            <h1>
+                                <field name="name" placeholder="Estimate name"/>
+                            </h1>
+                        </div>
+                        <notebook>
+                            <page string="Basic data">
+                                <group name="group_alias" colspan="2" col="2">
+                                    <group>
+                                        <field name="project_id"/>
+                                        <field name="contract_id"/>
+                                        <field name="spj_id"/>
+                                        <field name="partner_id"/>
+                                    </group>
+                                    <group>
+                                        <field name="contractor_id"/>
+                                        <field name="currency_id"/>
+                                        <field name="overheads"/>
+                                        <field name="comment"/>
+                                    </group>
+                                </group>
+                                <field name="pricing_ids"/>
+                            </page>
+                        </notebook>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+        <record id="view_estimate_tree" model="ir.ui.view">
+            <field name="name">bm.estimate.tree</field>
+            <field name="model">bm.estimate</field>
+            <field name="arch" type="xml">
+                <tree string="Estimate">
+                    <field name="project_id"/>
+                    <field name="contract_id"/>
+                    <field name="spj_id"/>
+                    <field name="partner_id"/>
+                    <field name="contractor_id"/>
+                    <field name="currency_id"/>
+                </tree>
+            </field>
+        </record>
+        <record id="estimate_act" model="ir.actions.act_window">
+            <field name="name">Estimates</field>
+            <field name="res_model">bm.estimate</field>
+            <field name="view_mode">tree,form</field>
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">
+                    Here, you can create new Estimate
+                </p>
+            </field>
+        </record>
+        <menuitem action="estimate_act" id="bm_action_estimate" name="Estimates" parent="bm.bm_menu_left" sequence="6"/>
     </data>
 </openerp>
